@@ -3,25 +3,20 @@ package com.appsdeveloperblog.payments.service;
 import com.appsdeveloperblog.core.dto.Payment;
 import com.appsdeveloperblog.payments.entities.PaymentEntity;
 import com.appsdeveloperblog.payments.repos.PaymentRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class PaymentServiceImpl implements PaymentService {
     public static final String SAMPLE_CREDIT_CARD_NUMBER = "374245455400126";
     private final PaymentRepository paymentRepository;
     private final CreditCardProcessorRemoteService ccpRemoteService;
-
-    public PaymentServiceImpl(PaymentRepository paymentRepository,
-                              CreditCardProcessorRemoteService ccpRemoteService) {
-        this.paymentRepository = paymentRepository;
-        this.ccpRemoteService = ccpRemoteService;
-    }
 
     @Override
     public Payment process(Payment payment) {
@@ -41,6 +36,6 @@ public class PaymentServiceImpl implements PaymentService {
     @Override
     public List<Payment> findAll() {
         return paymentRepository.findAll().stream().map(entity -> new Payment(entity.getId(), entity.getOrderId(), entity.getProductId(), entity.getProductPrice(), entity.getProductQuantity())
-        ).collect(Collectors.toList());
+        ).toList();
     }
 }
